# llm-council

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  start
.github/: dependabot.yml
.github/workflows/: docker-build.yml
backend/: config.py  context.py  council.py  file_ingestion.py  main.py  models.py  openrouter.py  storage.py  transcription.py
deploy/: .env.example  README.md
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.css  App.jsx  api.js  index.css  presets.js  providerColors.js  utils.js
frontend/src/components/: ChatInterface.css  ChatInterface.jsx  CopyButton.css  CopyButton.jsx  CouncilConfig.css  CouncilConfig.jsx  ModelSelector.css  ModelSelector.jsx  PromptLab.css  PromptLab.jsx  Sidebar.css  Sidebar.jsx  Stage1.css  Stage1.jsx  Stage2.css  Stage2.jsx  Stage3.css  Stage3.jsx  VoiceButton.css  VoiceButton.jsx
frontend/tests/: presets.test.mjs
scripts/: retry_stage2_3.py
tests/unit/: test_config.py  test_context.py  test_council.py  test_file_ingestion.py  test_storage.py
unraid/: README.md  llm-council-template.xml
