[project]
name = "llm-council"
version = "0.1.0"
description = "Your LLM Council"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "groq>=1.0.0",
    "python-multipart>=0.0.9",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
# Target Python 3.10+
target-version = "py310"

# Line length (88 is Ruff/Black default, widely adopted standard)
line-length = 88

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable recommended rules (progressive approach - start with essentials, extend gradually)
select = [
    "F",      # pyflakes - catches undefined names, unused imports, logic errors
    "E4",     # pycodestyle errors (subset) - import errors
    "E7",     # pycodestyle errors (subset) - statement errors
    "E9",     # pycodestyle errors (subset) - runtime errors
    "I",      # isort - import sorting
    "N",      # pep8-naming - naming conventions
    "UP",     # pyupgrade - modern Python idioms (Python 3.10+ features)
    "B",      # flake8-bugbear - common bugs and design problems
    "C4",     # flake8-comprehensions - better list/dict/set comprehensions
    "SIM",    # flake8-simplify - suggestions for simpler code
    "RUF",    # Ruff-specific rules - Ruff's own linting rules
]

# Ignore specific rules that may be too strict for this project
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Function call in default argument (common in FastAPI)
]

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__.py files
"__init__.py" = ["F401"]
# Allow assert statements in tests
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
# Use double quotes for strings (2026 style guide)
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Use stable formatting features
docstring-code-format = true
